--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
     font-weight: bold;
 }
 
-ul.header-right {
+.header-right {
     list-style: none;
     font-size: 18px;
     color: #E5E7EB;
@@ -34,6 +34,19 @@ ul.header-right {
     display: flex;
     gap: 12px;
 }
+
+a:link {
+    text-decoration: none;
+    color: white;
+}
+a:visited {
+    color: white;
+}
+
+a:hover {
+    color: grey;
+}
+
 
 .top-blue {
     display: flex;
